appsettings.json: update connectionstrings for dev and release

--- a/RSE.LearnBlazorHostedApp/Server/appsettings.json
+++ b/RSE.LearnBlazorHostedApp/Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RSE.LearnBlazorHostedApp.Server-98f4697f-b38b-4e66-b35c-6e47c14ff374;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RSE.LearnBlazorHostedApp.Server;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=.,1433;Initial Catalog=RSE.LearnBlazorHostedApp.Server;User ID=sa;Password=P@ssw0rd!@#$;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
