--- a/RSE.LearnBlazorHostedApp/Server/appsettings.Development.json
+++ b/RSE.LearnBlazorHostedApp/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RSE.LearnBlazorHostedApp.Server;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
