--- a/RSE.LearnBlazorHostedApp/Server/RSE.LearnBlazorHostedApp.Server.csproj
+++ b/RSE.LearnBlazorHostedApp/Server/RSE.LearnBlazorHostedApp.Server.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\FranzLocalFolderProfile.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.13" />
   </ItemGroup>
 
